# agentic-ai

./: 01-hello-world.py  02a-structure-outputs.py  02b-deps.py  02c-tools.py  03a-reflection.py  03b-web-search.py  04a-rag.py  04b-agentic-rag.py  04c-agentic-rag-tools.py  04d-graphrag.py  05a-real-use-case.py  05b-real-use-case-stocks.py  README.md  pyproject.toml  scratch.py
data/sample-lancedb/pokemon_moves.lance/_indices/94b70be5-0ce1-4e94-b7a6-d8f922fe3a4c/: part_1_docs.lance  part_1_invert.lance  part_1_tokens.lance
data/sample-lancedb/pokemon_moves.lance/_transactions/: 0-2f60ba62-2fbf-404e-b122-d350fd0aa532.txn  1-d1a150d1-cfb3-44ce-9a76-775760bc9268.txn
data/sample-lancedb/pokemon_moves.lance/data/: ac3da438-afd8-4efa-8430-f8d2fb952b57.lance
src/: 00-ingestion.py  utils.py  yahoo_finance.py
